Add secondary information

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8" />
   <title>Résumé</title>
   <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+
+  <style>
+    .ryu-gif {
+      height: 300px;
+      width: 155px;
+      background-image: url(../assets/ryu.gif)
+    }
+  </style>
 </head>
 
 <body>
@@ -85,17 +93,386 @@
           </div>
           <div class="row">
             <div class="ten wide column">
-              <!-- Experience -->
+              <h3>EXPERIENCE</h3>
+              <ul class="timeline">
+                <li>
+                  <p><small>2018</small></p>
+                  <p> Amongst many fighters of the past was featured in the movie "Ready Player One". Ryu ready always!
+                  </p>
+                </li>
+                <li>
+                  <p><small>2017</small></p>
+                  <p> United with unknown until then to me Power Rangers to defea resurrected M.Bison.Damn good fighters
+                    they are,
+                    even not knowing karate ways!</p>
+                </li>
+                <li>
+                  <p><small>2016</small></p>
+                  <p> In "Street Fighter V" once and for all erased M.Bison from earth and tamed my inner Evil Ryu. Also
+                    spent some
+                    time on a side-project, mini-series "Street Fighter: Resurrection".</p>
+                </li>
+
+                <li>
+                  <p><small>2014</small></p>
+                  <p> Filmed in a martial arts tutorial "Street Fighter: Assassin's Fist", revealing to audience
+                    forgotten art of
+                    Ansatsuken.</p>
+                </li>
+
+                <li>
+                  <p><small>2012</small></p>
+                  <p>The gods of intenet concluded me in the animated movie "Wreck-It Ralph", but rewarded me with a
+                    good drink for
+                    it!</p>
+                </li>
+
+                <li>
+                  <p><small>2008</small></p>
+                  <p>My evil alter ego sneaked out of control and became a boss in "Street Fighter IV".</p>
+                </li>
+
+                <li>
+                  <p><small>2006</small></p>
+                  <p> Borrowed my famous ripped gi to Soki in "Onimusha: Dawn of Dreams", gods informed me he needed
+                    that for the
+                    battle.</p>
+                </li>
+
+                <li>
+                  <p><small>1998</small></p>
+                  <p>Defeated M. Bison in "Street Fighter Alpha 2", bastard wanted to use my heroic body for his evil
+                    intentions, but
+                    retreated with shame. Also this year I encountered Marvel universe in "Marvel vs. Capcom: Clash of
+                    Super Heroes"
+                    fighter,loyal to my employer, Capcom, of course.</p>
+                </li>
+
+                <li>
+                  <p><small>1997</small></p>
+                  <p> Reunited with Ken, my friend and opponent in "Street Fighter III". Men's friendship works
+                    mysteriously. Also
+                    helped with Arika project "Street Fighter EX"</p>
+                </li>
+
+                <li>
+                  <p><small>1996</small></p>
+                  <p>Took care of villainous Akuma in "Street Fighter Alpha 2". As a freelance on "Super Puzzle Fighter
+                    II Turbo"
+                    tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious
+                    enigmas, never
+                    again!</p>
+                </li>
+
+                <li>
+                  <p><small>1995</small></p>
+                  <p> Kept fighting in "Street Fighter Alpha: Warriors' Dreams".</p>
+                </li>
+
+                <li>
+                  <p><small>1994</small></p>
+                  <p>Screened in a movie "Street Fighter", so that the batllesof past would not be forgotten by
+                    millenial generation.
+                  </p>
+                </li>
+
+                <li>
+                  <p><small>1991</small></p>
+                  <p> Was promoted to "Street Fighter II". Didn't stay there for long, celebrations and office dwelling
+                    is not for me!
+                  </p>
+                </li>
+
+                <li>
+                  <p><small>1987</small></p>
+                  <p>Started working for Capcom project "Street Fighter". My partner was Ken Masters, the boss'name was
+                    Sagat.</p>
+                </li>
+              </ul>
+
+              <h3>PUBLICATIONS</h3>
+              <ul class="timeline">
+                <li>
+                  <p><small>2011</small></p>
+                  <p>The true and humble story of me under pseudonim Tyler Wilde in an article "The evolution of Ken and
+                    Ryu"</p>
+                </li>
+                <li>
+                  <p><small>2003-2018</small></p>
+                  <p> For 15 years I have published comic books with Udon Entertainment depicting my adventures, bitter
+                    lessons and
+                    great victories.</p>
+                </li>
+              </ul>
+
+              <h3>ACHIEVEMENTS</h3>
+              <ul class="timeline">
+                <li>
+                  <p><small>#1</small> in "Top 25 Street Fighter Characters" by IGN, who also called me "fancy", "icon"
+                    and "a
+                    testament to the virtue of simplicity" ❤️</p>
+                </li>
+
+                <li>
+                  <p><small>#2</small>in "Top 20 Street Fighter Characters of All Time" by GameDaily, same council found
+                    me worth of
+                    #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken
+                    I was named "5th Most Powerful Street Fighter Character" by Screen Rant-san</p>
+                </li>
+
+                <li>
+                  <p><small>#71</small> in "Top 100 Heroes of All Time" by UGO Networks, also recognized
+                    <small>#2</small> in their
+                    list of "Top 50 Street Fighter Characters"
+                  </p>
+                </li>
+                <li>
+                  <p>In a survey of 4000 online matches for Super Street Fighter IV, I got to be the most popular
+                    character, with
+                    16.6% of players choosing my side
+                  <p>
+                </li>
+              </ul>
+
+              <h3>LIFE & EDUCATION</h3>
+              <ul class="timeline">
+                <li>
+                  <p>To live is to fight and to fight is to live. I started learning fighting at my master Gouken's
+                    castle, I was
+                    beaten at head way too often to remember when exactly.</p>
+                </li>
+              </ul>
+
             </div>
             <div class="six wide column">
-              <!-- Languages -->
-              <!-- Skills -->
-              <!-- Character -->
-              <!-- Likes -->
-              <!-- Dislikes -->
-              <!-- Wants -->
-              <!-- Education -->
-              <!-- Articles -->
+              <section>
+                <h3>LANGUAGES</h3>
+                <p class="tags small"> <span class="language" lang="en">&#x1F1FA;&#x1F1F8;ENGLISH</span><span
+                    class="language" lang="cn"> &#x1f1e8;&#x1f1f3;MANDARIN</span><span class="language" lang="jp">
+                    &#x1f1ef;&#x1f1f5;JAPANESE</span>
+                <p>
+              </section>
+
+              <section>
+                <h3>SKILLS</h3>
+                <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS
+                  MASHING
+                  POTATOES COPYWRITING ACTING VOICEOVERS</p>
+              </section>
+
+              <section>
+                <h3>CHARACTER</h3>
+                <p class="tags small">NOBLE DIRECT BOLD CONFIDENT DARING SCHIZOPHRENIC DRAMATIC PERSUASIVE IMMEDIATE
+                  WISE</p>
+              </section>
+
+              <section>
+                <h3>LIFE LESSON</h3>
+                <p class="tags small">You must defeat Sheng Long to stand a chance.</p>
+              </section>
+
+              <section>
+                <h3>Likes&#x1f603;</h3>
+                <p class="tags small">GI VEGETABLES BLOOD SMALL MARSHMELLOWS RED COLOR KILLED ENEMY</p>
+              </section>
+
+              <section>
+                <h3>Dislikes&#x1f61e;</h3>
+                <p class="tags small">BISONS GHOSTS SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
+              </section>
+
+              <section>
+                <h3>Wants&#x1f97a;</h3>
+                <p class="tags small">BE FIT WRITE MORE BOOKS FIND A GIRLFRIEND TO GO TO CINEMA WITH KILL ALL OF AKUMA
+                  FAMILY</p>
+              </section>
+
+              <section>
+                <h3>Enemies&#x1F621;</h3>
+                <ul class="enemies">
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">A lot of evil enemies</label>
+                    <div class="labels">
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/M._Bison">Bison</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Seth">Seth</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Gill">Gill</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Akuma">Akuma</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Adon">Adon</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Kage">Kage</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Necalli">Necalli</a>
+                      <a rel="external" class="label" href="https://streetfighter.fandom.com/wiki/Evil_Ryu">Evil Ryu</a>
+                    </div>
+                  </li>
+                </ul>
+              </section>
+              <section>
+                <h3>Abilities</h3>
+                <ul class="abilities">
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Shoryuken</label>
+                    <div>
+                      A jumping, spinning uppercut, perfect for attacking jumping opponents or as a reversal.
+                      <ul>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Shin Shoryken</label>
+                          <div>
+                            I dashe forward with a midsection blow before finishing his foe off with a crushing 2-hit
+                            Shoryuken
+                          </div>
+                        </li>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Metsu Shoryuken</label>
+                          <div>
+                            A Dark Hado-enhanced Shoryuken, where I punche the opponent in their gut before connecting
+                            with a brutal
+                            Shoryuken to their chin
+                          </div>
+                        </li>
+                        <li>
+                          <div>Hado Shoryuken</div>
+                        </li>
+                        <li>
+                          <div>Forbidden Shoryuken</div>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Tatsumaki Senpukyaku</label>
+                    <div>
+                      A jumping kick in which I rotate my legs in a hurricane-like formation
+                      <ul>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Shinku Tatsumaki Senpukyaku</label>
+                          <div>
+                            An upgraded, stationary Tatsumaki Senpukyaku with an added vacuum effect, allowing me to
+                            suck in nearby
+                            opponents and hit them multiple times
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Hadoken</label>
+                    <div>
+                      An energy projectile created from my willpower. Those hit by it feel the force of a staggering
+                      kick with
+                      lingering pain.
+                      <ul>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Shakunetsu Hadoken</label>
+                          <div>
+                            A Hadoken imbued with the power of fire. Acts as a separate move in SFII and Alpha, and as
+                            my EX Hadoken
+                            from the III series onward
+                          </div>
+                        </li>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Denjin Hadoken</label>
+                          <div>
+                            A chargeable, electrified version of the Shinku Hadoken. Those hit with a fully-charged
+                            blast are
+                            stunned, giving me another opening to attack
+                          </div>
+                        </li>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Shinku Hadoken</label>
+                          <div>
+                            A powerful, multi-hitting Hadoken which can beat out smaller or weaker projectiles
+                          </div>
+                        </li>
+                        <li class="details">
+                          <input type="checkbox" id="other">
+                          <label for="other" class="summary">Metsu Hadoken</label>
+                          <div>
+                            A variant of the Shinku Hadouken done with the Satsui no Hado. I can perform this without
+                            transforming,
+                            but still retains this as Evil Ryu
+                          </div>
+                        </li>
+                        <li>
+                          <div>Ren Hadoken</div>
+                        </li>
+                        <li>
+                          <div>Baku Hadoken</div>
+                        </li>
+                        <li>
+                          <div>Hado no Kamae</div>
+                        </li>
+                        <li>
+                          <div>Hashogeki</div>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Joudan Sokutageri</label>
+                    <div>
+                      A slow yet hard-hitting forward-stepping side kick. More powerful versions of this move can send
+                      opponents
+                      flying off walls
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Mind’s Eye</label>
+                    <div>
+                      My V-Skill, based on the parry mechanic from Street Fighter III and the Hanagashi move given to me
+                      in USFIV’s
+                      Omega Mode. I enter a stance, during which he can parry an incoming attack
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Denjin Renki</label>
+                    <div>
+                      My first V-Trigger. All of Ryu’s moves, in particular the Hadoken and Shoryuken, gain electric
+                      properties. I
+                      can charge up my Hadoken to break through an opponent’s defenses, and my Shinkuu Hadoken is
+                      automatically
+                      upgraded to the Denjin Hadoken in this state, although performing it ends the V-Trigger
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Kakko Fubatsu</label>
+                    <div>
+                      My second V-Trigger. He gains access to a counterattack called Isshin, which forces opponents into
+                      a crumple
+                      state and leaves them open to follow-up attacks
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Collarbone Breaker</label>
+                    <div>
+                      An overhead punch primarily meant to break the guard of crouching opponents
+                    </div>
+                  </li>
+                  <li class="details">
+                    <input type="checkbox" id="other">
+                    <label for="other" class="summary">Solar Plexus Punch</label>
+                    <div>
+                      A crushing blow to the enemy’s midsection
+                    </div>
+                  </li>
+                </ul>
+              </section>
+              <section>
+                <div class="ryu-gif"></div>
+              </section>
             </div>
           </div>
         </div>
