--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
                 </ul>
               </section>
               <section>
+                <h2>Ryu Hoshi (リュウ Ryū)</h2>
                 <div class="ryu-gif"></div>
               </section>
             </div>
